<resources>
    <string name="app_name">Taller_ListV</string>
    <string name="titulo_cuadrado">CUADRADO</string>
    <string name="valor_lado_cuadrado">Valor del Lado</string>
    <string name="valor">Valor</string>
    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="lado_uno">Lado uno</string>
    <string name="valor_1">Valor Lado Uno</string>
    <string name="lado2">Valor Lado Dos</string>
    <string name="valor2">Valor Lado Dos</string>
    <string name="calcularR">Calcular</string>
    <string name="areas">Areas</string>
    <string name="volumenes">Volumenes</string>
    <string name="opciones">Opciones</string>
    <string name="operaciones_realizadas">Operaciones Realizadas</string>
    <string name="resultado_area_cuadrado">Resultado</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="triangulo">Triangulo</string>
    <string name="circulo">Circulo</string>
    <string name="operaciones">Operaciones</string>
    <string name="area">Area</string>
    <string name="volumen">Volumen</string>
    <string name="opcion">opcion</string>
    <string name="ok">OK</string>
    <string name="titulo_circulo">Circulo</string>
    <string name="titulo_triangulo">Triangulo</string>
    <string name="titulo_numero">No.</string>
    <string name="titulo_operaciones">Operaciones Realizadas</string>
    <string name="titulo_datos">Datos</string>
    <string name="titulo_resultado_operacion">resultado</string>
    <string-array name="lista_opciones">
        <item>@string/area</item>
        <item>@string/volumen</item>
        <item>@string/operaciones</item>
    </string-array>
    <string-array name="lista_areas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>
    <string-array name="lista_volumenes">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>
</resources>